<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fleet Forge</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_current_ride">Current</string>
    <string name="nav_history">History</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_register_driver">Register</string>
    <string name="nav_block_users">Block</string>
    <string name="nav_panic_status">Panic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="app_logo">App Logo</string>
    <string name="forgot_password_message">Enter your email and we’ll send you a link to reset your password</string>
    <string name="send">Send</string>
    <string name="please_enter_your_new_password_below">Please enter your new password below.</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home_address">Home Address</string>
    <string name="secure_your_account">Secure Your Account</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="next">Next</string>
    <string name="become_a_fleetforge_user">Become a FleetForge User</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="phone_number">Phone Number</string>
    <string name="order">ORDER</string>
    <string name="end_destination">End Destination</string>
    <string name="start_location">Start Location</string>
    <string name="price_rsd_0_00">Price: RSD 0.00</string>
    <string name="duration_0_min">Duration: 0 min</string>
    <string name="distance_0_km">Distance: 0 km</string>
    <string name="username">Username</string>
    <string name="resolve_panic">RESOLVE PANIC</string>
    <string name="go_online">Go Online</string>
    <string-array name="vehicle_types">
        <item>Van</item>
        <item>Luxury</item>
        <item>Standard</item>
    </string-array>
</resources>